--- a/package.json
+++ b/package.json
@@ -12,9 +12,18 @@
   "dependencies": {
     "@craco/craco": "^7.1.0",
     "@fortawesome/fontawesome-free": "^6.4.2",
+    "@mercadopago/sdk-react": "^0.0.15",
+    "axios": "^1.5.1",
     "framer-motion": "^10.16.4",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-big-calendar": "^1.8.4",
+    "react-calendar": "^4.6.1",
+    "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
+    "react-scroll": "^1.9.0",
+    "react-select": "^5.7.7",
+    "react-time-picker": "^6.5.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
